...
    }
    private func proceedToNextQuestionOrResults() {
        if self.isLastQuestion() {
            if let statistic = statisticService {
                statistic.store(correct: correctAnswers, total: self.questionsAmount)
                let result = QuizResultsViewModel(
                    title: "Этот раунд окончен!",
                    buttonText: "Сыграть еще раз",
                    statistic: statistic,
                    correctAnswers: correctAnswers,
                    questionsAmount: self.questionsAmount
                )
                viewController?.show(quiz: result)
...
